--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
         </div>
         <div class="datos1">
             <div class="dato">
-                <img src="/images/Total.svg" alt="">
+                <img src="images/Total.svg" alt="">
                 <div class="tittle-dato"><p>Total</p></div>
                 <div class="number Total odometer"><p>0</p></div>
             </div>
             <div class="dato">
-                <img src="/images/Arquitectura.svg" alt="">
+                <img src="images/Arquitectura.svg" alt="">
                 <div class="tittle-dato"><p>Arquitectura</p></div>
                 <div class="number Arqui odometer"><p>0</p></div>
             </div>
             <div class="dato">
-                <img src="/images/civiles.svg" alt="">
+                <img src="images/civiles.svg" alt="">
                 <div class="tittle-dato"><p>Civiles</p></div>
                 <div class="number Civil odometer"><p>0</p></div>
             </div>
             <div class="dato">
-                <img src="/images/inventoria.svg" alt="">
+                <img src="images/inventoria.svg" alt="">
                 <div class="tittle-dato"><p>Inventoria</p></div>
                 <div class="number Invent odometer"><p>0</p></div>
             </div>
             <div class="dato">
-                <img src="/images/Otros.svg" alt="">
+                <img src="images/Otros.svg" alt="">
                 <div class="tittle-dato"><p>Otros</p></div>
                 <div class="number Otro odometer"><p>0</p></div>
             </div>
@@ -139,22 +139,22 @@
         </div>
         <div class="logos-container">
             <div class="logos">
-                <img src="/images/elencor.png" alt="">
+                <img src="images/elencor.png" alt="">
             </div>
             <div class="logos">
-                <img src="/images/hospital.jpg" alt="">
+                <img src="images/hospital.jpg" alt="">
             </div>
             <div class="logos">
-                <img src="/images/LOGO ALCALDIA.jpeg" alt="">
+                <img src="images/LOGO ALCALDIA.jpeg" alt="">
             </div>
             <div class="logos">
-                <img src="/images/Logo-Renergeia.png" alt="">
+                <img src="images/Logo-Renergeia.png" alt="">
             </div>
             <div class="logos">
-                <img src="/images/11 AJ EN POSITIVO 06 FEB.png" alt="">
+                <img src="images/11 AJ EN POSITIVO 06 FEB.png" alt="">
             </div>
             <div class="logos">
-                <img src="/images/Seal_of_the_United_States_Southern_Command.png" alt="">
+                <img src="images/Seal_of_the_United_States_Southern_Command.png" alt="">
             </div>
         </div>
     </div>
