--- a/nosotros.html
+++ b/nosotros.html
@@ -40,7 +40,7 @@
         <div class="sec2">
             <div class="tarjeta">
                 <div class="ico"><img 
-                    src="/images/Mision.svg" alt=""></div>
+                    src="images/Mision.svg" alt=""></div>
                 <div class="title4">
                     <p>Misión</p>
                 </div>
@@ -60,8 +60,6 @@
                             </g> 
                         </g>
                     </svg>
-
-
                 </div>
                 <div class="title4">
                     <p>Visión</p>
@@ -101,31 +99,31 @@
         </div>
         <div class="valores">
             <div class="valor">
-                <img src="/images/innovacion.svg" alt="">
+                <img src="images/innovacion.svg" alt="">
                 <div class="tlt"><p>Innovación</p></div>
                 <div class="sbtlt"><p>Buscamos constantemente nuevas soluciones tecnológicas que optimicen los procesos y generen un impacto positivo en cada proyecto.</p></div>
             </div>
             <div class="line"></div>
             <div class="valor">
-                <img src="/images/calidad.svg" alt="">
+                <img src="images/calidad.svg" alt="">
                 <div class="tlt"><p>Calidad</p></div>
                 <div class="sbtlt"><p>Garantizamos altos estándares en cada etapa, desde la planeación hasta la ejecución, asegurando resultados confiables y duraderos.</p></div>
             </div>
             <div class="line"></div>
             <div class="valor">
-                <img src="/images/responsabilidad.svg" alt="">
+                <img src="images/responsabilidad.svg" alt="">
                 <div class="tlt"><p>Responsabilidad</p></div>
                 <div class="sbtlt"><p>Asumimos con seriedad nuestros compromisos, actuando con ética y transparencia frente a clientes, colaboradores y comunidades.</p></div>
             </div>
             <div class="line"></div>
             <div class="valor">
-                <img src="/images/Sostenibilidad.svg" alt="">
+                <img src="images/Sostenibilidad.svg" alt="">
                 <div class="tlt"><p>Sostenibilidad</p></div>
                 <div class="sbtlt"><p>Desarrollamos proyectos que promueven el uso eficiente de los recursos, respetando el medio ambiente y aportando al bienestar social.</p></div>
             </div>
             <div class="line"></div>
             <div class="valor">
-                <img src="/images/Equipo.svg" alt="">
+                <img src="images/Equipo.svg" alt="">
                 <div class="tlt"><p>Trabajo en equipo</p></div>
                 <div class="sbtlt"><p>Fomentamos la colaboración entre profesionales multidisciplinarios para alcanzar soluciones integrales y efectivas.</p></div>
             </div>
@@ -136,8 +134,7 @@
         <div class="cards">
             <div class="card">
                 <div class="ico2">
-                    <img class="dif" src="/images/Contratado.svg" alt="">
-                </div>
+                    <img class="dif" src="images/Contratado.svg" alt=""> </div>
                 <div class="sub-title2"><p>Valor total contratado</p></div>
                 <div class="row">
                     <div class="data2"><p>$</p><p class="COP odometer">0</p></div>
@@ -146,7 +143,7 @@
             </div>
             <div class="card">
                 <div class="ico2">
-                    <img src="/images/Equivalente.svg" alt="">
+                    <img src="images/Equivalente.svg" alt="">
                 </div>
                 <div class="sub-title2"><p>Equivalente en salarios mínimos legales mensuales vigentes</p></div>
                 <div class="row">
