--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
     <header>
         <div class="container header">
             <div><h1>Geoingenieria Ltda</h1></div>
-            <nav>
+            <label for="" class="label">
+                <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" >
+                <path d="M4 6h16v2H4zM4 11h16v2H4zM4 16h16v2H4z"></path>
+                </svg>
+            </label>
+            <nav class="menu">
                 <ul>
-                    <li><a class="active" href="index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a class="active" href="servicios.html">Servicios</a></li>
                     <li><a href="contactos.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
+        <div class="placeholder"></div>
     </header>
         <!-- Contenido principal de la página -->
     <div class="container" id="seccion1">
@@ -188,3 +194,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js" integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 </html>
+
