--- a/contactos.html
+++ b/contactos.html
@@ -13,12 +13,17 @@
     <header>
         <div class="container header">
             <div><h1>Geoingenieria Ltda</h1></div>
-            <nav>
+            <label for="" class="label">
+                <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" >
+                <path d="M4 6h16v2H4zM4 11h16v2H4zM4 16h16v2H4z"></path>
+                </svg>
+            </label>
+            <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a class="active" href="contactos.html">Contactos</a></li>
+                    <li><a class="active" href="servicios.html">Servicios</a></li>
+                    <li><a href="contactos.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,4 +91,5 @@
     </footer>
 </body>
 <script src="script.js"></script>
+
 </html>
