--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </label>
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a class="active" href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a class="active" href="servicios.html">Servicios</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="contactos.html">Contactos</a></li>
                 </ul>
             </nav>
@@ -194,4 +194,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js" integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 </html>
+
 
