--- a/contactos.html
+++ b/contactos.html
@@ -22,8 +22,8 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a class="active" href="servicios.html">Servicios</a></li>
-                    <li><a href="contactos.html">Contactos</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a class="active" href="contactos.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
@@ -93,3 +93,4 @@
 <script src="script.js"></script>
 
 </html>
+
