--- a/nosotros.html
+++ b/nosotros.html
@@ -22,8 +22,8 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a class="active" href="servicios.html">Servicios</a></li>
+                    <li><a class="active" href="nosotros.html">Nosotros</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="contactos.html">Contactos</a></li>
                 </ul>
             </nav>
@@ -187,5 +187,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js" integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script2.js"></script>
 </html>
+
 
 
