--- a/nosotros.html
+++ b/nosotros.html
@@ -142,7 +142,7 @@
                     <img class="dif" src="images/Contratado.svg" alt=""> </div>
                 <div class="sub-title2"><p>Valor total contratado</p></div>
                 <div class="row">
-                    <div class="data2"><p>$</p><p class="COP odometer">0</p></div>
+                    <div class="data2"><p>$ 216.954.041.254</p></div>
                     <div class="divisa"><p>Aprox</p><p>COP</p></div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="sub-title2"><p>Equivalente en salarios mínimos legales mensuales vigentes</p></div>
                 <div class="row">
-                    <div class="data2 SMLMV odometer"><p>0</p></div>
+                    <div class="data2 SMLMV"><p>252.354</p></div>
                     <div class="divisa"><p>Aprox</p><p>SMLMV</p></div>
                 </div>
             </div>
@@ -187,8 +187,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js" integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script2.js"></script>
 </html>
-
-
-
-
 
