--- a/nosotros.html
+++ b/nosotros.html
@@ -108,25 +108,25 @@
                 <div class="tlt"><p>Innovación</p></div>
                 <div class="sbtlt"><p>Buscamos constantemente nuevas soluciones tecnológicas que optimicen los procesos y generen un impacto positivo en cada proyecto.</p></div>
             </div>
-            <div class="line"></div>
+            <div class="line a"></div>
             <div class="valor">
                 <img src="images/calidad.svg" alt="">
                 <div class="tlt"><p>Calidad</p></div>
                 <div class="sbtlt"><p>Garantizamos altos estándares en cada etapa, desde la planeación hasta la ejecución, asegurando resultados confiables y duraderos.</p></div>
             </div>
-            <div class="line"></div>
+            <div class="line b"></div>
             <div class="valor">
                 <img src="images/responsabilidad.svg" alt="">
                 <div class="tlt"><p>Responsabilidad</p></div>
                 <div class="sbtlt"><p>Asumimos con seriedad nuestros compromisos, actuando con ética y transparencia frente a clientes, colaboradores y comunidades.</p></div>
             </div>
-            <div class="line"></div>
+            <div class="line c"></div>
             <div class="valor">
                 <img src="images/Sostenibilidad.svg" alt="">
                 <div class="tlt"><p>Sostenibilidad</p></div>
                 <div class="sbtlt"><p>Desarrollamos proyectos que promueven el uso eficiente de los recursos, respetando el medio ambiente y aportando al bienestar social.</p></div>
             </div>
-            <div class="line"></div>
+            <div class="line d"></div>
             <div class="valor">
                 <img src="images/Equipo.svg" alt="">
                 <div class="tlt"><p>Trabajo en equipo</p></div>
