--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/themes/odometer-theme-default.min.css" integrity="sha512-jHurNV8IL4Q4DRHzlRaIboSWZqnA3KU6KTiRQrtU+jxE1MHxdiveHrztuHhyna6PWTE427SxNDDUqjaruirB2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <meta name="theme-color" content="#fff">
+    <title>Geoingenieria</title>
 </head>
 <body>
     <header>
@@ -184,8 +185,8 @@
         </div>
         <div class="footer">
             <ul class="footer">
-                <li class="footer">Síguenos</li>
-                <li class="insta"></li>
+                <li>Síguenos</li>
+                <li class="insta"><a href="https://www.instagram.com/geoingenierialtda/">@geoingenieria</a></li>
             </ul>
         </div>
     </footer>
@@ -194,5 +195,3 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js" integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 </html>
-
-
