--- a/nosotros.html
+++ b/nosotros.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/themes/odometer-theme-default.min.css" integrity="sha512-jHurNV8IL4Q4DRHzlRaIboSWZqnA3KU6KTiRQrtU+jxE1MHxdiveHrztuHhyna6PWTE427SxNDDUqjaruirB2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <meta name="theme-color" content="#fff">
+    <title>Geoingenieria</title>
 </head>
 <body>
     <header>
@@ -178,8 +179,8 @@
         </div>
         <div class="footer">
             <ul class="footer">
-                <li class="footer">Síguenos</li>
-                <li class="insta"></li>
+                <li>Síguenos</li>
+                <li class="insta"><a href="https://www.instagram.com/geoingenierialtda/">@geoingenieria</a></li>
             </ul>
         </div>
     </footer>
