--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <meta name="theme-color" content="#fff">
+    <title>Geoingenieria</title>
 </head>
 <body>
     <header>
@@ -111,12 +112,11 @@
         </div>
         <div class="footer">
             <ul class="footer">
-                <li class="footer">Síguenos</li>
-                <li class="insta"></li>
+                <li>Síguenos</li>
+                <li class="insta"><a href="https://www.instagram.com/geoingenierialtda/">@geoingenieria</a></li>
             </ul>
         </div>
     </footer>
 </body>
 <script src="script.js"></script>
-
 </html>
